Funcionalidade de esconder o footer
Adicionei por uma função em JavaScript uma opção para esconder o rodapé da página

--- a/index.html
+++ b/index.html
@@ -17,16 +17,25 @@
             button {
                 border: none;
                 color: #ff5E84;
-
                 font-weight: bold;
 
                 background: none;
             }
 
-            .fat {
+            button.fat {
+                color: white;
                 background: #ff5E84;
             }
 
+            #footer a {
+                color: #25282B;
+                text-decoration: none;
+
+            }
+
+            .hide {
+                display: none;
+            }
         </style>
 
     </head>
@@ -51,6 +60,18 @@
         <button class="fat">Ver Ideias</button>
 
         <p id="footer">Com ❤ <a href="https://github.com/gabriel-bianchessi">Gabriel Bianchessi</a></p>
+
+        <script>
+
+            document
+                .querySelector("button.fat")
+                .addEventListener("click", function(){
+                    document.querySelector("#footer")
+                    .classList
+                    .toggle("hide")
+                })
+
+        </script>
     </body>
 
 </html>
