Modificações no formulário, CSS e JS
Fiz modificações referentes às animações no formulário

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </main>
 
                 <section id="buttons">
-                    <button>+ Adicionar Ideia</button>
+                    <button onclick="onOff()">+ Adicionar Ideia</button>
                     <button class="fat">Ver Ideias</button>
                 </section>
 
@@ -91,8 +91,8 @@
 
         <!-- Modal -->
 
-        <div id="modal">
-            <div id="content">
+        <div id="modal" class="hide">
+            <div class="content">
                 <h1>Nova ideia</h1>
 
                 <form action="">
@@ -122,6 +122,7 @@
                         <input type="url" name="link">
                     </div>
 
+                    <a href="#" onclick="onOff()">Voltar</a>
                     <button>Salvar</button>
                                 
                 </form>
