Criação do indeias.html
Criei a página resposável por mostrar as ideias

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
     <head>
         <meta charset="UTF-8">
@@ -42,7 +42,7 @@
                     Com ❤ <a href="https://github.com/gabriel-bianchessi">Gabriel Bianchessi</a>
                 </footer>
             </section>
-
+            
             <section id="last-ideas">
 
                 <div class="idea">
